Trim IDREFs after splitting, to remove stray newlines and other whitespace chars

Bug: 695214
Change-Id: Iedddf16ff3a80960d45a7ea2802ad8d550770364